# toy-synthesizer

./: Cargo.toml  README.md
src/: consts.rs  linsearch.rs  main.rs  oscillator.rs  theme.css
