[package]
name = "toy-synthesizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13.5"
anyhow = "1.0.57"
crossbeam-channel = "0.5.4"
tuix = {git = "https://github.com/geom3trik/tuix", branch = "main"}