[package]
name = "toy-synthesizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13.5"
anyhow = "1.0.57"
crossbeam-channel = "0.5.4"
device_query = "1.1.1"
# TODO: look at tui-rs = "0.18"